Add basic http service

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,8 +6,7 @@
     <mat-form-field>
       <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date" [formControl]="dateControl">
       <mat-datepicker-toggle matSuffix [for]="$any(picker)"></mat-datepicker-toggle>
-      <ngx-mat-datetime-picker #picker [showSeconds]="true">
-      </ngx-mat-datetime-picker>
+      <ngx-mat-datetime-picker #picker [showSeconds]="true"></ngx-mat-datetime-picker>
     </mat-form-field>
   </div>
 </div>
