--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,11 +2,22 @@
   <div class="header">
     <h1>Stock market advisor</h1>
   </div>
+  <mat-divider></mat-divider>
   <div class="body-container">
-    <mat-form-field>
-      <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date" [formControl]="dateControl">
-      <mat-datepicker-toggle matSuffix [for]="$any(picker)"></mat-datepicker-toggle>
-      <ngx-mat-datetime-picker #picker [showSeconds]="true"></ngx-mat-datetime-picker>
-    </mat-form-field>
+    <form class="input-container" [formGroup]="dateControl">
+      <mat-form-field>
+        <input matInput [ngxMatDatetimePicker]="fromPicker" placeholder="Choose from date" formControlName="fromDate">
+        <mat-datepicker-toggle matSuffix [for]="$any(fromPicker)"></mat-datepicker-toggle>
+        <ngx-mat-datetime-picker #fromPicker [showSeconds]="true"></ngx-mat-datetime-picker>
+      </mat-form-field>
+  
+      <mat-form-field>
+        <input matInput [ngxMatDatetimePicker]="toPicker" placeholder="Choose to date" formControlName="toDate">
+        <mat-datepicker-toggle matSuffix [for]="$any(toPicker)"></mat-datepicker-toggle>
+        <ngx-mat-datetime-picker #toPicker [showSeconds]="true"></ngx-mat-datetime-picker>
+      </mat-form-field>
+
+      <button class="get-button" mat-stroked-button (click)="getStockBuySellBest()">Get Dates</button>
+    </form>
   </div>
 </div>
