--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -17,5 +17,13 @@
         height: 40px;
       }
     }
+
+    .prices-card {
+      max-width: 550px;
+
+      mat-card-content {
+        margin: 0 16px;
+      }
+    }
   }
 }
