--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -26,13 +26,14 @@
 
       <button class="get-button" mat-stroked-button (click)="getStockBuySellBest()">Get Dates</button>
     </form>
+    <div *ngIf="apiErrors">{{apiErrors}}</div>
     <mat-card *ngIf="bestPricePoints$ | async as points" class="prices-card">
       <mat-card-header>
         <mat-card-title>Best prices</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <div *ngIf="points.buy">Best time to buy: {{points.buy.time | date:'medium'}}</div>
-        <div *ngIf="points.sell">Best time to sell: {{points.sell.time | date:'medium'}}</div>
+        <div *ngIf="points.buy">Best time to buy: {{points.buy.time | date:'medium'}}. At price: {{points.buy.price}}</div>
+        <div *ngIf="points.sell">Best time to sell: {{points.sell.time | date:'medium'}}. At price: {{points.sell.price}}</div>
         <div *ngIf="stockStats$ | async as stats">
           <div>Stocks bought: {{stats.stocksBoughtAndSold}}</div>
           <div>Total profit: {{stats.profit}}</div>
